Primeiros metodos de logica de negocio

--- a/automasystem/src/main/resources/application.properties
+++ b/automasystem/src/main/resources/application.properties
@@ -1,1 +1,8 @@
 
+# CONFIGURACAO DE BASE DE DADOS
+spring.datasource.url=jdbc:mysql://localhost:3306/automasystem?useTimezone=true&serverTimezone=UTC
+spring.datasource.username=root
+spring.datasource.password=automasystem
+spring.jpa.database=MYSQL
+spring.jpa.show-sql=TRUE
+spring.jpa.hibernate.ddl-auto=update
