--- a/automasystem/build.gradle
+++ b/automasystem/build.gradle
@@ -13,7 +13,10 @@ repositories {
 	mavenCentral()
 }
 
-dependencies {
+ext {
+	mapstructVersion = "1.2.0.Final"
+}
+	dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 	//implementation 'org.springframework.boot:spring-boot-starter-security'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
@@ -25,8 +28,14 @@ dependencies {
 	}
 	testImplementation 'org.springframework.security:spring-security-test'
 
+	compile group: 'org.mapstruct', name: 'mapstruct-jdk8', version: '1.2.0.Final'
+	compileOnly 'org.mapstruct:mapstruct-processor:1.2.0.Final'
+	annotationProcessor 'org.mapstruct:mapstruct-processor:1.2.0.Final'
+
+
 }
 
 test {
 	useJUnitPlatform()
 }
+
