--- a/automasystem/build.gradle
+++ b/automasystem/build.gradle
@@ -17,23 +17,22 @@ ext {
 	mapstructVersion = "1.2.0.Final"
 }
 	dependencies {
-	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
-	//implementation 'org.springframework.boot:spring-boot-starter-security'
-	implementation 'org.springframework.boot:spring-boot-starter-web'
-	testCompile group: 'junit', name: 'junit', version: '4.13'
-	developmentOnly 'org.springframework.boot:spring-boot-devtools'
-	runtimeOnly 'mysql:mysql-connector-java'
-	testImplementation('org.springframework.boot:spring-boot-starter-test') {
-		exclude group: 'org.junit.vintage', module: 'junit-vintage-engine'
+		implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+		//implementation 'org.springframework.boot:spring-boot-starter-security'
+		implementation 'org.springframework.boot:spring-boot-starter-web'
+		testCompile group: 'junit', name: 'junit', version: '4.13'
+		developmentOnly 'org.springframework.boot:spring-boot-devtools'
+		runtimeOnly 'mysql:mysql-connector-java'
+		testImplementation('org.springframework.boot:spring-boot-starter-test') {
+			exclude group: 'org.junit.vintage', module: 'junit-vintage-engine'
+		}
+		testImplementation 'org.springframework.security:spring-security-test'
+		compile group: 'org.mapstruct', name: 'mapstruct-jdk8', version: '1.2.0.Final'
+		compileOnly 'org.mapstruct:mapstruct-processor:1.2.0.Final'
+		annotationProcessor 'org.mapstruct:mapstruct-processor:1.2.0.Final'
+		compile group: 'javax.validation', name: 'validation-api', version: '2.0.0.Final'
+		testCompile group: 'org.mockito', name: 'mockito-all', version: '2.0.2-beta'
 	}
-	testImplementation 'org.springframework.security:spring-security-test'
-
-	compile group: 'org.mapstruct', name: 'mapstruct-jdk8', version: '1.2.0.Final'
-	compileOnly 'org.mapstruct:mapstruct-processor:1.2.0.Final'
-	annotationProcessor 'org.mapstruct:mapstruct-processor:1.2.0.Final'
-
-
-}
 
 test {
 	useJUnitPlatform()
