--- a/automasystem/build.gradle
+++ b/automasystem/build.gradle
@@ -32,6 +32,11 @@ ext {
 		annotationProcessor 'org.mapstruct:mapstruct-processor:1.2.0.Final'
 		compile group: 'javax.validation', name: 'validation-api', version: '2.0.0.Final'
 		testCompile group: 'org.mockito', name: 'mockito-all', version: '2.0.2-beta'
+
+		//compile group: 'io.springfox', name: 'springfox-swagger2', version: '3.0.0'
+		compile group: 'io.springfox', name: 'springfox-swagger-ui', version: '3.0.0'
+		compile group: 'io.springfox', name: 'springfox-boot-starter', version: '3.0.0'
+
 	}
 
 test {
