--- a/automasystem/build.gradle
+++ b/automasystem/build.gradle
@@ -18,7 +18,7 @@ ext {
 }
 	dependencies {
 		implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
-		//implementation 'org.springframework.boot:spring-boot-starter-security'
+		implementation 'org.springframework.boot:spring-boot-starter-security'
 		implementation 'org.springframework.boot:spring-boot-starter-web'
 		testCompile group: 'junit', name: 'junit', version: '4.13'
 		developmentOnly 'org.springframework.boot:spring-boot-devtools'
